# recipebook

./: .gitignore
api/airconn/: Cargo.toml
api/recipebook_api/: Cargo.toml
api/recipebook_api/src/: main.rs
api/scraper/: Cargo.toml
arch/: Recipe App.drawio
recipebook_api/: Cargo.toml
recipebook_api/src/: llm_utils.rs  main.rs  recipe_scraper.rs
