[package]
name = "recipebook_api"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.25", features = ["rustls-tls", "json"] }
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
